# orca

./: .gitignore  CMakeLists.txt  Makefile  README.md  base.h  cli_main.c  field.c  field.h  gbuffer.c  gbuffer.h  osc_out.c  osc_out.h  sim.c  sim.h  sysmisc.c  sysmisc.h  term_util.c  term_util.h  tui_main.c  vmio.c  vmio.h
scripts/: get_portmidi.sh
